# rules_ppx

./: .bazelrc  MODULE.bazel  README.md
cfg/print/: BUILD.bazel
ppxlib/: BUILD.bazel
print/: BUILD.bazel
print/text/: BUILD.bazel
