module(
    name                = "rules_ppx",
    version             = "5.0.0",
    compatibility_level = 5,
    bazel_compatibility = [">=7.0.0"]
)

## bcr:
bazel_dep(name = "platforms",      version = "0.0.10")
bazel_dep(name = "bazel_skylib",   version = "1.7.1")
bazel_dep(name = "rules_cc",       version = "0.0.17")
bazel_dep(name = "rules_ocaml",     version = "5.0.0")
