load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag",
     "string_flag", "string_setting")

package(default_visibility = ["//visibility:public"])

bool_flag( name = "text", build_setting_default = False)
config_setting(name = "text?",
               flag_values = {":text": str(True)})

string_flag( name = "print", build_setting_default = "binary")

string_setting( name = "binary!", build_setting_default = "binary")
# string_setting( name = "text!", build_setting_default = "text")

config_setting(
    name = "binary?",
    flag_values = {":print": "binary"}
)
# config_setting(
#     name = "text?",
#     flag_values = {":print": "text"}
# )
